# NOVA_

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
+file/: CMakePresets.txt
ATE/: CMakeLists.txt
BTE/: CMakeLists.txt
LTE/: CMakeLists.txt
